--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
-        "buildCommand": "npm run build"
+        "distDir": "build"
       }
     },
     {
@@ -22,10 +21,6 @@
     {
       "src": "/(.*)",
       "dest": "/client/build/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/build/index.html"
     }
   ]
 } 
