Update configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
+      "dest": "/server.js"
     },
     {
       "src": "/static/(.*)",
