--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,33 @@
       "dest": "/server.js"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/client/build/static/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/client/build/assets/$1"
+    },
+    {
+      "src": "/fonts/(.*)",
+      "dest": "/client/build/fonts/$1"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/client/build/images/$1"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/client/build/manifest.json"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/client/build/favicon.ico"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/client/build/index.html"
     }
