--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "morgan": "^1.10.0",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
