--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
     "winston": "^3.17.0"
