Update Vercel config to properly build React client

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "version": 2,
   "builds": [
-    { "src": "client/build/**", "use": "@vercel/static" },
+    { 
+      "src": "client/package.json", 
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
     { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
