--- a/vercel.json
+++ b/vercel.json
@@ -12,17 +12,18 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/server.js" },
-    { "src": "/static/(.*)", "dest": "/client/static/$1" },
-    { "src": "/assets/(.*)", "dest": "/client/assets/$1" },
-    { "src": "/images/(.*)", "dest": "/client/images/$1" },
-    { "src": "/fonts/(.*)", "dest": "/client/fonts/$1" },
-    { "src": "/manifest.json", "dest": "/client/manifest.json" },
-    { "src": "/asset-manifest.json", "dest": "/client/asset-manifest.json" },
+    { "src": "/static/(.*)", "dest": "/client/build/static/$1" },
+    { "src": "/assets/(.*)", "dest": "/client/build/assets/$1" },
+    { "src": "/images/(.*)", "dest": "/client/build/images/$1" },
+    { "src": "/fonts/(.*)", "dest": "/client/build/fonts/$1" },
+    { "src": "/manifest.json", "dest": "/client/build/manifest.json" },
+    { "src": "/asset-manifest.json", "dest": "/client/build/asset-manifest.json" },
+    { "src": "/favicon.ico", "dest": "/client/build/favicon.ico" },
     
-    { "src": "/chat", "dest": "/client/index.html" },
-    { "src": "/purchase", "dest": "/client/index.html" },
+    { "src": "/chat", "dest": "/client/build/index.html" },
+    { "src": "/purchase", "dest": "/client/build/index.html" },
     
-    { "src": "/(.*)", "dest": "/client/$1" },
-    { "src": "/", "dest": "/client/index.html" }
+    { "src": "/(.*)", "dest": "/client/build/$1" },
+    { "src": "/", "dest": "/client/build/index.html" }
   ]
 } 
