--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "openai": "^4.47.1",
+    "pdfkit": "^0.17.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
