--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
